--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,7 @@
 body {
     background-color: black;
-    font-family: sans-serif;
+    font-family:"游ゴシック Light",sans-serif;
+
 }
 h2 {
     color: white;
