--- a/CSS/style.css
+++ b/CSS/style.css
@@ -111,6 +111,7 @@ h2 {
     margin-left: 5px;
     text-align: center;
     margin-bottom: 0px;
+    margin-top: 0px;
 }
 .activity_detail{
     color: white;
