--- a/CSS/style.css
+++ b/CSS/style.css
@@ -87,17 +87,17 @@ h2 {
     list-style-type: none;
     padding-left: 10px;
 }
-.nav_table{
-   
+.box{
+    height: 100vh;
 
 }
 .nav_tab{
     width: 20vw;
-    height: 100vh;
+    
     align-items: center;
 }
 .activity_tab{
-    height: 100vh;
+  
     width: 80vw;
     background-color: #001437;
 }
