--- a/CSS/style.css
+++ b/CSS/style.css
@@ -88,16 +88,15 @@ h2 {
     padding-left: 10px;
 }
 .box{
-   
+    height: 100vh;
 
 }
 .nav_tab{
     width: 20vw;
-    height: 99vh;
     align-items: center;
 }
 .activity_tab{
-    height: 99vh;
+    
     width: 80vw;
     background-color: #001437;
 }
@@ -135,4 +134,8 @@ h2 {
     width: 80vw;
     background-color: #001437;
     margin-left: 5px;
+}
+#activity_body{
+    background: url('activity_background.png');
+    background-size: 100%;
 }
