--- a/CSS/style.css
+++ b/CSS/style.css
@@ -123,6 +123,24 @@ h2 {
     float: left;
     margin-right: 15px;
 }
+.activity_detail_img_p1{
+    width: 28%;
+    margin-left: 5px;
+    float: left;
+    margin-right: 15px;
+}
+.activity_detail_img_p2{
+    width: 32%;
+    margin-left: 5px;
+    float: left;
+    margin-right: 15px;
+}
+.activity_detail_img_p3{
+    width: 28%;
+    margin-left: 5px;
+    clear: left;
+    margin-right: 15px;
+}
 /*.activity_next_click{
     scroll-behavior: smooth;  
 }*/
