--- a/CSS/style.css
+++ b/CSS/style.css
@@ -11,6 +11,9 @@ h2 {
 h2 a:hover{
     color: #ffff23;
 }
+footer{
+    color:white;
+}
 .main-visual {
     display: flex;
 
@@ -47,17 +50,13 @@ h2 a:hover{
  }
  .myname{
     margin-left: 30px;
-    opacity: 0;
-    transform: translateX(50px);
-    transition: 1s ease;
  }
  .about_text{
      color: white;
      font-size: 20px;
      margin-left: 30px;
-     transform: translateX(50px);
-     transition: 1s ease;
  }
+   
  .about_text hr{
     margin-right: 30px;
  }
@@ -93,12 +92,18 @@ h2 a:hover{
 .test{
     color: white;
 }
-
+.top_text{
+    color: white;
+    font-size: 20px;
+}
 /*-------------------ここまでHOME---------------------*/
 .page_nav{
     color: white;
     list-style-type: none;
     padding-left: 10px;
+    opacity: 0;
+    transform: translateX(20px);
+    transition: 1s ease;
 }
 .page_nav a{
     color: white;
@@ -179,6 +184,12 @@ h2 a:hover{
 .mainlink{
     text-decoration: none;
 }
+.detail_link{
+    color:white;
+}
+.detail_link :hover{
+    color: #ffff23;
+}
 /*----------------ここまでactivity-----------*/
 header {
     display: flex;
@@ -209,17 +220,17 @@ header {
       width:100%;
       animation: slideIn 0.8s cubic-bezier(0.25, 1, 0.5, 1) 1 forwards;
   }
-  .history_title{
-      border-left: #ffff23 solid 5px;
-      color: white;
-      font-size: 35px;
-      padding-left: 5px;
-      margin-left: 10px;
-      animation: slideIn 1s cubic-bezier(0.25, 1, 0.5, 1) 1 forwards;
-  }   
-  @keyframes slideIn {
+  .history_title_1{
+    border-left: #ffff23 solid 5px;
+    color: white;
+    font-size: 35px;
+    padding-left: 5px;
+    margin-left: 10px;
+    animation: slideIn 0.8s cubic-bezier(0.25, 1, 0.5, 1) 1 forwards;
+}   
+@keyframes slideIn {
     0% {
-      transform: translateX(130px);
+      transform: translateX(180px);
       opacity: 0;
     }
     100% {
@@ -229,15 +240,29 @@ header {
       opacity: 1;
     }
   }
+  .history_title{
+      border-left: #ffff23 solid 5px;
+      color: white;
+      font-size: 35px;
+      padding-left: 5px;
+      margin-left: 10px;
+      opacity: 0;
+      transform: translateX(20px);
+      transition: 1s ease;
+  }   
   .history_detail{
       color:white;
       font-size: 25px;
       margin-left: 25px;
-      animation: slideIn 1.2s cubic-bezier(0.25, 1, 0.5, 1) 1 forwards;
+      opacity: 0;
+      transform: translateX(20px);
+      transition: 1s ease;
   }
   .history_detail_sub{
     color:white;
     font-size: 22px;
     margin-left: 35px;
-    animation: slideIn 1.4s cubic-bezier(0.25, 1, 0.5, 1) 1 forwards;
+    opacity: 0;
+      transform: translateX(20px);
+      transition: 1s ease;
   }
