--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,6 +3,7 @@ body {
 
     font-family:"游ゴシック Light",sans-serif;
 }
+
 h2 {
     color: white;
     font-size: 50px;
@@ -21,14 +22,23 @@ footer{
     background: url('topimage.jpg') top center / cover no-repeat;
 }
 
- 
- .main-visual h1{
-    margin-left: 30px; 
-    color: white;
-    font-size: 50px;
-    padding-bottom: 0px;
-    margin-bottom: 0px;
- }
+@media screen and(min-width: 1px) {
+    .main-visual h1{
+        margin-left: 30px; 
+        color: white;
+        font-size: 20px;
+        padding-bottom: 0px;
+        margin-bottom: 0px;
+     }
+    }
+    .main-visual h1{
+        margin-left: 50px; 
+        color: white;
+        font-size: 50px;
+        padding-bottom: 0px;
+        margin-bottom: 0px;
+     }
+
  .main-visual hr{
     margin-left: 30px;  
  }
@@ -49,6 +59,7 @@ footer{
  .top_nav_text a:hover{
     color: #ffff23;
  }
+ 
  .myname{
     margin-left: 30px;
  }
@@ -74,11 +85,21 @@ footer{
     width: 10%;
     margin-left: 20%;
 }
-#activity_text{
-    color: white;
-    font-size: 30px;  
-    text-align: center;
+@media screen and (max-width: 480px) {
+    #activity_text{
+        color: white;
+        font-size: 18px;  
+        text-align: center;
+    }
 }
+@media screen and (min-width: 480px) {
+    #activity_text{
+        color: white;
+        font-size: 30px;  
+        text-align: center;
+    }
+}
+
 
 .section_activity{
     text-align: center;
@@ -90,9 +111,7 @@ footer{
     width: 30%;
     
 }
-.test{
-    color: white;
-}
+
 .top_text{
     color: white;
     font-size: 20px;
@@ -260,10 +279,12 @@ header {
       transition: 1s ease;
   }
   .history_detail_sub{
-    color:white;
+    color:white !important;
     font-size: 22px;
     margin-left: 35px;
     opacity: 0;
       transform: translateX(20px);
       transition: 1s ease;
   }
+    @media screen and (max-width: 1000px) {
+    }
