--- a/CSS/style.css
+++ b/CSS/style.css
@@ -21,16 +21,6 @@ footer{
     height: 100vh;
     background: url('topimage.jpg') top center / cover no-repeat;
 }
-
-@media screen and(min-width: 1px) {
-    .main-visual h1{
-        margin-left: 30px; 
-        color: white;
-        font-size: 20px;
-        padding-bottom: 0px;
-        margin-bottom: 0px;
-     }
-    }
     .main-visual h1{
         margin-left: 50px; 
         color: white;
@@ -85,20 +75,18 @@ footer{
     width: 10%;
     margin-left: 20%;
 }
-@media screen and (max-width: 480px) {
+/*@media screen and (max-width: 480px) {
     #activity_text{
         color: white;
         font-size: 18px;  
         text-align: center;
     }
-}
-@media screen and (min-width: 480px) {
+}*/
     #activity_text{
         color: white;
         font-size: 30px;  
         text-align: center;
     }
-}
 
 
 .section_activity{
@@ -286,5 +274,3 @@ header {
       transform: translateX(20px);
       transition: 1s ease;
   }
-    @media screen and (max-width: 1000px) {
-    }
