--- a/CSS/style.css
+++ b/CSS/style.css
@@ -83,7 +83,7 @@ footer{
     }
 }
     #activity_text{
-        color: red;
+        color: white;
         font-size: 30px;  
         text-align: center;
     }
