--- a/CSS/style.css
+++ b/CSS/style.css
@@ -197,7 +197,7 @@ footer{
     color: #ffff23;
 }
 #mob_view{
-    display: none;
+    display: none !important;
 }
 @media screen and (max-width: 480px) {
 	/*スマホ用のCSS*/
