--- a/CSS/style.css
+++ b/CSS/style.css
@@ -196,7 +196,11 @@ footer{
 .detail_link :hover{
     color: #ffff23;
 }
-
+@media screen and (min-width: 481px) {
+#mob_view{
+    display: none;
+}
+}
 @media screen and (max-width: 480px) {
 	/*スマホ用のCSS*/
     #PC_view{
