--- a/CSS/style.css
+++ b/CSS/style.css
@@ -123,6 +123,9 @@ footer{
     height: 100vh;
 
 }
+.box_mob{
+   
+}
 .nav_tab{
     width: 20vw;
     align-items: center;
@@ -248,6 +251,53 @@ footer{
         width: 100%;
         height: 100%;
     }
+}
+/*スマホ用のメニューバー*/
+
+.menu a {
+    display: block;
+    padding: 15px;
+    text-decoration: none;
+    color: white;
+    text-align: center;
+}
+
+label {
+    display: block;
+    
+    padding : 15px;
+    line-height: 1;
+    color :#fff;
+    background-color: transparent;
+    cursor :pointer;
+    text-align: right;
+}
+
+input {
+    display: none;
+}
+
+.menu ul {
+    margin: 0;
+    padding: 0;
+    background : #262626;
+    list-style: none;
+}
+
+.menu li {
+    height: 0;
+    overflow: hidden;
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    -ms-transition: all 0.5s;
+    -o-transition: all 0.5s;
+    transition: all 0.5s;
+}
+
+#menu_bar01:checked ~ #links01 li,
+#menu_bar02:checked ~ #links02 li {
+    height: 54px;
+    opacity: 1;
 }
 /*----------------ここまでactivity-----------*/
 header {
