--- a/CSS/style.css
+++ b/CSS/style.css
@@ -213,12 +213,15 @@ footer{
         width: 88%;
         margin-left: 5%;
         margin-right: 5%;
+        animation: slideIn 0.6s cubic-bezier(0.25, 1, 0.5, 1) 1;
     }
     .activity_detail{
         color: white;
         font-size: 17px;
         margin-left: 5%;
         margin-right: 5%;
+        animation: slideIn 0.8s cubic-bezier(0.25, 1, 0.5, 1) 1;
+        
     }
     .activity_detail_img_p1{
         margin-top: 15px;
